--- a/src/main/resources/templates/crear_producto.html
+++ b/src/main/resources/templates/crear_producto.html
@@ -49,6 +49,12 @@
 					class="mr-2 focus:ring-2 focus:ring-blue-500" /> Es Pesable
 				</label>
 			</div>
+			
+			<div class="mb-4">
+			    <label for="codigoDeBarras" class="block text-gray-700">Código de Barras (Usa el escáner):</label>
+			    <input type="text" id="codigoDeBarras" th:field="*{codigoDeBarras}" placeholder="Escanea el código de barras aquí" 
+			           class="w-full p-2 border border-gray-300 rounded-md focus:outline-none focus:ring-2 focus:ring-blue-500" />
+			</div>
 
 			<div class="flex justify-end">
 				<button type="submit"
@@ -66,6 +72,12 @@
             window.location.href = /*[[@{/categorias/nueva}]]*/;
         };
         /*]]>*/
+		
+		
+		document.addEventListener("DOMContentLoaded", function () {
+		    document.getElementById("codigoDeBarras").focus();
+		});
+
     </script>
 
 
