Correccion de errores y saneamiento.

--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -21,7 +21,10 @@
             <a href="/productos/rentabilidad" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Productos Rentabilidad</a>
             <a href="/compras" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Compras</a>
             <a href="/productos" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Productos</a>
-        </div>
+			<a href="/print/configure" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Impresora</a>
+			<a href="/barcode/configure" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Escaner</a>
+			<a href="/productos/gestionStock" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Gestion Stock</a>
+			 </div>
     </div>
 </body>
 </html>
