--- a/src/main/resources/templates/caja.html
+++ b/src/main/resources/templates/caja.html
@@ -9,135 +9,142 @@
 </head>
 <body class="bg-gray-100">
 	<div class="container mx-auto py-8 px-4">
-		<h1 class="text-3xl font-bold mb-8">Caja</h1>
-		<!-- Usuario y Logout -->
-			<div class="flex justify-between items-center mb-4">
-				<p class="text-lg">Bienvenido, <span th:text="${nombreUsuario}"></span></p>
-				<form th:action="@{/logout}" method="post">
-					<button type="submit"
-						class="bg-red-500 text-white rounded-lg py-2 px-4 hover:bg-red-600 transition duration-300">
-						Cerrar sesión
-					</button>
-				</form>
-			</div>
+	    <!-- Usuario y Logout -->
+	    <div class="flex justify-between items-center p-4 bg-blue-100 border border-blue-300 rounded-lg shadow-lg">
+	        <div>
+	            <h1 class="font-bold text-xl">Caja</h1>
+	        </div>
 
-		<div class="mt-4">
-			<p>
-				Hora actual: <span id="current-time"></span>
-			</p>
-			<p>
-				Tiempo de caja abierta: <span id="time-elapsed"></span>
-			</p>
-		</div>
-		<div class="space-y-6">
-		    <!-- Escanear Código de Barras -->
-		    <div class="flex space-x-4 mb-6">
-		        <div class="flex-1">
-		            <label for="codigoDeBarras" class="block font-semibold mb-2">Escanear Código de Barras:</label>
-		            <input type="text" id="codigoDeBarras" placeholder="Escanea el código de barras aquí" class="form-control w-full px-3 py-2 border rounded-md" />
-		        </div>
-		        <div class="flex-1">
-		            <label for="dni" class="block font-semibold mb-2">DNI del Cliente:</label>
-		            <div class="flex w-full">
-		                <input type="text" id="dni-cliente" class="flex-1 px-3 py-2 border rounded-md" placeholder="Ingresa el DNI del cliente" />
-		                <button id="btn-aplicar-descuento" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 ml-2">Aplicar Descuento <span class="text-xs">(Intro)</span></button>
-		            </div>
-		        </div>
-		    </div>
-		</div>
+	        <p class="text-lg">Bienvenido, <span th:text="${nombreUsuario}"></span></p>
+	        <div class="mt-4">
+	            <p>
+	                Hora actual: <span id="current-time"></span>
+	            </p>
+	            <p>
+	                Tiempo de caja abierta: <span id="time-elapsed"></span>
+	            </p>
+	        </div>
+	        <form th:action="@{/logout}" method="post">
+	            <button type="submit" class="bg-red-500 text-white rounded-lg py-2 px-4 hover:bg-red-600 transition duration-300">
+	                Cerrar sesión
+	            </button>
+	        </form>
+	    </div>
+	</div>
+	<div class="container mx-auto py-8 px-4">
+	    <!-- Escanear Código de Barras -->
+	    <div class="flex space-x-4 mb-6 p-4 bg-blue-100 border border-blue-300 rounded-lg shadow-lg">
+	        <div class="flex-1">
+	            <label for="codigoDeBarras" class="block font-semibold mb-2">Escanear Código de Barras:</label>
+	            <input type="text" id="codigoDeBarras" placeholder="Escanea el código de barras aquí" class="form-control w-full px-3 py-2 border rounded-md" />
+	        </div>
+	        <div class="flex-1">
+	            <label for="dni" class="block font-semibold mb-2">DNI del Cliente:</label>
+	            <div class="flex w-full">
+	                <input type="text" id="dni-cliente" class="flex-1 px-3 py-2 border rounded-md" placeholder="Ingresa el DNI del cliente" />
+	                <button id="btn-aplicar-descuento" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 ml-2">Aplicar Descuento <span class="text-xs">(Intro)</span></button>
+	            </div>
+	        </div>
+	    </div>
 
+	    <div class="flex space-x-4 mb-6">
+	        <!-- Productos Seleccionados -->
+	        <div class="border border-gray-200 rounded-lg w-[450px] p-4 bg-gray-100 shadow-md"> <!-- Cambié el max-w a un ancho fijo -->
+	            <h2 class="text-xl font-semibold bg-gray-200 py-3 px-6">Productos Seleccionados</h2>
+	            <div class="p-6">
+	                <div id="productos-seleccionados" class="overflow-y-auto max-h-80">
+	                    <table class="min-w-full divide-y divide-gray-200">
+	                        <thead>
+	                            <tr class="bg-gray-50">
+	                                <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Producto</th>
+	                                <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Precio Unitario</th>
+	                                <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Cantidad</th>
+	                                <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Subtotal</th>
+	                            </tr>
+	                        </thead>
+	                        <tbody id="tabla-productos-seleccionados">
+	                            <tr th:each="detalle, indexStat : ${productosSeleccionados}">
+	                                <td th:text="${detalle.nombreProducto}"></td>
+	                                <td th:text="${detalle.precioUnitario}"></td>
+	                                <td>
+	                                    <input type="number" min="0.01" step="0.01" th:value="${detalle.cantidad}" onchange="cambiarCantidad(${indexStat.index}, this.value)" class="border rounded px-2 py-1 w-16 text-xs" />
+	                                </td>
+	                                <td th:text="${detalle.subtotal}"></td>
+	                                <td>
+	                                    <button onclick="eliminarProducto(${indexStat.index})" class="bg-red-500 text-white px-2 py-1 rounded">X</button>
+	                                </td>
+	                            </tr>
+	                        </tbody>
+	                    </table>
+	                </div>
+	            </div>
+	        </div>
 
-		<div class="flex space-x-4">
-		    <!-- Productos Seleccionados -->
-		    <div class="flex-1 border border-gray-200 rounded-lg">
-		        <h2 class="text-xl font-semibold bg-gray-200 py-3 px-6">Productos Seleccionados</h2>
-		        <div class="p-6">
-		            <div id="productos-seleccionados" class="overflow-y-auto max-h-80">
-		                <table class="min-w-full divide-y divide-gray-200">
-		                    <thead>
-		                        <tr class="bg-gray-50">
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Producto</th>
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Descripción</th>
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Precio Unitario</th>
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Cantidad</th>
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Subtotal</th>
-		                            <th class="px-4 py-2 text-left text-xs font-medium text-gray-500 uppercase">Acciones</th>
-		                        </tr>
-		                    </thead>
-		                    <tbody id="tabla-productos-seleccionados">
-		                        <tr th:each="detalle, indexStat : ${productosSeleccionados}">
-		                            <td th:text="${detalle.nombreProducto}"></td>
-		                            <td th:text="${detalle.descripcion}"></td>
-		                            <td th:text="${detalle.precioUnitario}"></td>
-									<td>
-									    <input type="number" min="0.01" step="0.01" th:value="${detalle.cantidad}" onchange="cambiarCantidad(${indexStat.index}, this.value)" class="border rounded px-2 py-1 w-16 text-xs" />
-									</td>
-		                            <td th:text="${detalle.subtotal}"></td>
-		                            <td>
-		                                <button onclick="eliminarProducto(${indexStat.index})" class="bg-red-500 text-white px-2 py-1 rounded">Eliminar</button>
-		                            </td>
-		                        </tr>
-		                    </tbody>
-		                </table>
-		            </div>
-		        </div>
-		    </div>
+	        <div class="flex justify-center mt-6"> <!-- Contenedor flex para alinear los elementos horizontalmente -->
+	            <!-- Detalles de Costos -->
+	            <div class="max-w-xl mx-auto flex-1 text-center border border-gray-200 rounded-lg mx-2 p-4 bg-yellow-100 shadow-lg"> <!-- Cambié max-w a max-w-xl -->
+	                <div class="mt-4">
+	                    <span class="text-lg font-semibold">Subtotal: $<span id="subtotal-sin-descuentos">0.00</span></span>
+	                </div>
+	                <div class="mt-4">
+	                    <span class="text-lg font-semibold">Promociones: $<span id="monto-descuento" class="text-red-500">0.00</span></span>
+	                </div>
+	                <div class="mt-4">
+	                    <span class="text-lg font-semibold">Recargo credito: $<span id="monto-recargo" class="text-red-500">0.00</span></span>
+	                </div>
+	                <div class="mt-4">
+	                    <span class="font-bold text-xl bg-green-100 px-2 rounded">Total: $<span id="total-venta" class="text-green-600">0.00</span></span>
+	                </div>
+	                <div class="mt-4">
+	                    <span class="text-lg font-semibold">Efectivo: $<span id="monto-pagado-display">0.00</span></span>
+	                </div>
+	                <div class="mt-4">
+	                    <span class="font-bold text-xl bg-red-100 px-2 rounded">Vuelto: $<span id="vuelto"></span></span>
+	                </div>
+	            </div>
 
-			<!-- Detalles de Costos -->
-			<div class="flex-1 mt-4 text-center">
-			    <div class="mt-4">
-			        <span class="text-lg font-semibold">Subtotal: $<span id="subtotal-sin-descuentos">0.00</span></span>
-			    </div>
-			    <div class="mt-4">
-			        <span class="text-lg font-semibold">Promociones: $<span id="monto-descuento" class="text-red-500">0.00</span></span>
-			    </div>
-				<div class="mt-4">
-						        <span class="text-lg font-semibold">Recargo credito: $<span id="monto-recargo" class="text-red-500">0.00</span></span>
-						    </div>
-			    <div class="mt-4">
-			        <span class="font-bold text-xl bg-green-100 px-2 rounded">Total: $<span id="total-venta" class="text-green-600">0.00</span></span>
-			    </div>
-			    <div class="mt-4">
-			        <span class="text-lg font-semibold">Efectivo: $<span id="monto-pagado-display">0.00</span></span>
-			    </div>
-			    <div class="mt-4">
-			        <span class="font-bold text-xl bg-red-100 px-2 rounded">Vuelto: $<span id="vuelto"></span></span>
-			    </div>
+	            <!-- Método de Pago -->
+	            <div class="max-w-xl mx-auto flex-1 text-center border border-gray-200 rounded-lg mx-2 ml-10 mr-10 p-4 bg-green-100 shadow-lg"> <!-- Cambié a max-w-xl -->
+	                <h2 class="text-lg font-semibold mb-2">Método de Pago</h2>
+	                <div class="flex flex-wrap justify-center gap-2 mb-4">
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="seleccionarMetodoPago('EFECTIVO')">Efectivo <span class="text-xs">(E)</span></button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="seleccionarMetodoPago('TARJETADEBITO')">Tarjeta debito <span class="text-xs">(B)</span></button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="seleccionarMetodoPago('TARJETACREDITO')">Tarjeta credito <span class="text-xs">(C)</span></button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="seleccionarMetodoPago('QR')">QR <span class="text-xs">(Q)</span></button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="seleccionarMetodoPago('CUENTACORRIENTE')">CTA.CORRIENTE <span class="text-xs">(W)</span></button>
+	                    <button class="bg-green-500 text-white rounded py-1 px-2 text-sm hover:bg-green-600 transition duration-300 w-28" onclick="">Cancelar <span class="text-xs">(O)</span></button>
+	                </div>
+	            </div>
 
-			    <!-- Método de Pago -->
-			    <div class="mt-8">
-			        <h2 class="text-xl font-semibold mb-2">Método de Pago</h2>
-			        <div class="flex justify-center space-x-4 mb-4">
-			            <button
-			                class="bg-green-500 text-white rounded-lg py-2 px-4 hover:bg-green-600 transition duration-300"
-			                onclick="seleccionarMetodoPago('EFECTIVO')">Efectivo <span class="text-xs">(E)</span></button>
-			            <button
-			                class="bg-green-500 text-white rounded-lg py-2 px-4 hover:bg-green-600 transition duration-300"
-			                onclick="seleccionarMetodoPago('TARJETADEBITO')">Tarjeta debito<span class="text-xs">(B)</span></button>
-							<button class="bg-green-500 text-white rounded-lg py-2 px-4 hover:bg-green-600 transition duration-300"
-							onclick="seleccionarMetodoPago('TARJETACREDITO')">Tarjeta credito<span class="text-xs">(C)</span></button>
-			            <button
-			                class="bg-green-500 text-white rounded-lg py-2 px-4 hover:bg-green-600 transition duration-300"
-			                onclick="seleccionarMetodoPago('QR')">QR<span class="text-xs">(Q)</span></button>
-			        </div>
-					           
-					    <button
-					        class="btn-mostrar-modal-cuentacorriente bg-green-500 text-white rounded-lg py-2 px-4 hover:bg-green-600 transition duration-300"
-					        onclick="seleccionarMetodoPago('CUENTACORRIENTE')">CTA.CORRIENTE<span class="text-xs">(W)</span></button>
-					</div>
-			        <div id="campo-monto-pagado" class="mt-4 hidden max-w-xs mx-auto">
-			            <label for="monto-pagado-input" class="block text-lg font-medium text-gray-700 mb-2">Monto Pagado:</label>
-			            <div class="flex items-center bg-gray-200 rounded-md">
-			                <span class="text-gray-600 px-3">$</span>
-			                <input type="text" id="monto-pagado-input" class="block w-full px-3 py-2 text-lg rounded-md border-gray-300 focus:ring-blue-500 focus:border-blue-500 sm:text-sm bg-transparent appearance-none">
-			            </div>
-			        </div>
-			    </div>
+	            <div class="mt-5 ml-10 mr-10">
+	                <button id="btn-registrar-venta" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300">Registrar Venta <span class="text-xs">(R)</span></button>
+	                <div id="campo-monto-pagado" class="mt-4 hidden max-w-xs mx-auto">
+	                    <label for="monto-pagado-input" class="block text-lg font-medium text-gray-700 mb-2">Monto Pagado:</label>
+	                    <div class="flex items-center bg-gray-200 rounded-md">
+	                        <span class="text-gray-600 px-3">$</span>
+	                        <input type="text" id="monto-pagado-input" class="block w-full px-3 py-2 text-lg rounded-md border-gray-300 focus:ring-blue-500 focus:border-blue-500 sm:text-sm bg-transparent appearance-none">
+	                    </div>
+	                </div>
+	            </div>
+	        </div>
+	    </div>
 
-			    <div class="mt-8">
-			        <button id="btn-registrar-venta" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300">Registrar Venta <span class="text-xs">(R)</span></button>
-			    </div>
-			</div>
+	    <style>
+	        /* Asegura que el tamaño de la tabla sea fijo */
+	        #productos-seleccionados {
+	            max-width: 100%;
+	            overflow-x: auto; /* Permite desplazamiento horizontal si es necesario */
+	        }
+
+	        /* Ajusta el tamaño del texto en pantallas más pequeñas */
+	        @media (max-width: 768px) {
+	            th, td {
+	                font-size: 0.75rem; /* Tamaño de fuente más pequeño para dispositivos móviles */
+	            }
+	        }
+	    </style>
+	</div>
+
 
 			<!-- Modal para ingresar DNI de cliente para Cuenta Corriente -->
 			<div id="modal-cuentacorriente" class="fixed z-10 inset-0 overflow-y-auto hidden">
@@ -160,23 +167,24 @@
 			</div>
 
 
-	<!-- Botones de Categorías y Productos -->
-	<div class="mb-6">
-	    <div class="flex flex-wrap gap-2 mb-4">
-	        <div th:each="categoria : ${categorias}">
-	            <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300" 
-	                    th:text="${categoria.nombre}" 
-	                    th:onclick="'filtrarProductos(' + ${categoria.id} + ')'">
-	            </button>
-	        </div>
-	        <button id="btn-mostrar-modal"
-	                class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300">
-	            Ingresar Monto Manualmente
-	        </button>
-	    </div>
-	    <!-- <h2 class="text-xl font-semibold mb-4">Productos</h2>-->
-	    <div id="productos" class="space-y-4"></div>
-	</div>
+			<!-- Botones de Categorías y Productos -->
+			<div class="ml-4 mr-4 mb-6 p-4 bg-purple-100 border border-purple-300 rounded-lg shadow-lg">
+			    <div class="flex flex-wrap gap-2 mb-4">
+			        <div th:each="categoria : ${categorias}">
+			            <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300" 
+			                    th:text="${categoria.nombre}" 
+			                    th:onclick="'filtrarProductos(' + ${categoria.id} + ')'">
+			            </button>
+			        </div>
+			        <button id="btn-mostrar-modal"
+			                class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300">
+			            Ingresar Monto Manualmente
+			        </button>
+			    </div>
+			    <!-- <h2 class="text-xl font-semibold mb-4">Productos</h2>-->
+			    <div id="productos" class="space-y-4"></div>
+			</div>
+
 
 	<!-- Modal para ingresar monto manualmente -->
 	<div id="modal-monto" class="fixed z-10 inset-0 overflow-y-auto hidden">
@@ -634,14 +642,13 @@
 		        const fila = document.createElement('tr');
 		        fila.innerHTML = `
 		            <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-gray-900">${detalle.nombreProducto}</td>
-		            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">${detalle.descripcion}</td>
 		            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">$${detalle.precioUnitario.toFixed(2)}</td>
 		            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">
 		                <input type="number" min="0.01" step="0.01" value="${detalle.cantidad}" class="cantidad-input" data-index="${index}">
 		            </td>
 		            <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-500">$${detalle.subtotal.toFixed(2)}</td>
 		            <td>
-		                <button onclick="eliminarProducto(${index})" class="bg-red-500 text-white px-2 py-1 rounded">Eliminar</button>
+		                <button onclick="eliminarProducto(${index})" class="bg-red-500 text-white px-2 py-1 rounded">X</button>
 		            </td>
 		        `;
 		        tablaProductos.appendChild(fila);
