--- a/src/main/resources/templates/caja.html
+++ b/src/main/resources/templates/caja.html
@@ -171,7 +171,7 @@
 			<div class="ml-4 mr-4 mb-6 p-4 bg-purple-100 border border-purple-300 rounded-lg shadow-lg">
 			    <div class="flex flex-wrap gap-2 mb-4">
 			        <div th:each="categoria : ${categorias}">
-			            <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300" 
+			            <button class="bg-blue-500 text-white py-2 px-4 rounded-lg hover:bg-blue-600 transition duration-300 " 
 			                    th:text="${categoria.nombre}" 
 			                    th:onclick="'filtrarProductos(' + ${categoria.id} + ')'">
 			            </button>
@@ -484,25 +484,36 @@
 		    // Marcar como escaneando
 		    escaneando = true;
 
-		    let codigoProducto = code;
+		    let codigoProducto = code.trim(); // Eliminar espacios en blanco
 		    let importe = null;
 
 		    // Si el código de barras comienza con '2', es un producto pesable
 		    if (codigoProducto.startsWith("2")) {
 		        codigoProducto = codigoProducto.substring(1); // Eliminar el primer carácter '2'
-		        importe = codigoProducto.substring(codigoProducto.length - 7, codigoProducto.length - 3);
 
-		        const parteEntera = importe.substring(0, 5); // 5 dígitos para la parte entera
-		        const decimales = importe.charAt(5) + importe.charAt(6); // Los dos últimos dígitos como decimales
+		        // Verificar que tenga al menos 12 dígitos (13 con el dígito de control)
+		        if (codigoProducto.length !== 12) {
+		            console.error(`Código de barras inválido, longitud incorrecta: ${codigoProducto.length}`);
+		            alert("Código de barras inválido: la longitud no es la esperada.");
+		            escaneando = false;
+		            return;
+		        }
 
-		        codigoProducto = codigoProducto.substring(0, codigoProducto.length - 7); // Eliminar los últimos 7 dígitos
+		        // Extraer código de producto (4 primeros dígitos)
+		        const codigoDeProducto = codigoProducto.substring(0, 4);
 
-		        importe = parseFloat(`${parseInt(parteEntera, 10)}.${decimales}`); // Formatear el importe como un número decimal
+		        // Extraer el importe (6 dígitos, del 5 al 10)
+		        const importeCadena = codigoProducto.substring(4, 10);
+		        const parteEntera = importeCadena.substring(0, 5); // Los primeros 5 dígitos son la parte entera
+		        const decimales = importeCadena.substring(5, 7); // Los últimos 2 dígitos son los decimales
 
-		        console.log(`Código de producto: ${codigoProducto}, Importe: $${importe.toFixed(2)}`);
+		        // Convertir el importe a número decimal
+		        importe = parseFloat(`${parseInt(parteEntera, 10)}.${decimales}`);
+
+		        console.log(`Código de producto: ${codigoDeProducto}, Importe: $${importe.toFixed(2)}`);
 
 		        // Permitir múltiples escaneos de productos pesables
-		        axios.get(`/productos/codigo/${codigoProducto}`)
+		        axios.get(`/productos/codigo/${codigoDeProducto}`)
 		            .then(response => {
 		                if (response.data) {
 		                    agregarProductoSeleccionado(response.data, true, importe); // Pasar la bandera esDeBalanza y el importe
@@ -542,47 +553,10 @@
 		    inputField.dispatchEvent(new Event('input')); // Disparar el evento de input si es necesario
 		}
 
-
 		// Llama a esta función cada 500 ms (ajusta según tus necesidades)
 		setInterval(obtenerCodigoDeBarrasEscaneado, 500);
 
-		// Actualiza el campo de entrada
-		document.getElementById('codigoDeBarras').addEventListener('input', function(event) {
-		    const codigoBarras = this.value.trim();
-		    if (codigoBarras.length >= 5) { // Asegúrate de que la longitud es la esperada
-		        buscarProductoPorCodigo(codigoBarras);
-		        this.value = ''; // Limpiar el campo después de escanear
-		    }
-		});
-
-		function buscarProductoPorCodigo(codigoBarras) {
-		    console.log("Buscando producto con código:", codigoBarras);
-		    axios.get(`/productos/codigo/${codigoBarras}`)
-		        .then(response => {
-		            console.log("Respuesta del servidor:", response.data);
-		            if (response.data) {
-		                agregarProductoSeleccionado(response.data);
-		            } else {
-		                alert('Producto no encontrado');
-		            }
-		        })
-		        .catch(error => {
-		            console.error('Error al buscar el producto:', error);
-		            alert('Error al buscar el producto.');
-		        });
-		}
-
-		document.addEventListener("DOMContentLoaded", function () {
-		    const codigoDeBarrasInput = document.getElementById("codigoDeBarras");
-		    codigoDeBarrasInput.focus();
-		});
-
-		// Remover el foco al cargar la página
-		document.addEventListener("DOMContentLoaded", function () {
-		    document.getElementById('codigoDeBarras').blur(); // Evitar que el campo obtenga foco al cargar
-		});
-
-		// Función para agregar productos seleccionados (modificada)
+		// Función para agregar productos seleccionados
 		function agregarProductoSeleccionado(producto, esDeBalanza = false, importe = null) {
 		    const encontrado = productosSeleccionados.find(item => item.producto.id === producto.id);
 
@@ -592,8 +566,8 @@
 
 		        if (encontrado) {
 		            // Sumar la cantidad calculada al producto ya existente
-		            encontrado.cantidad += cantidadCalculada;  
-		            encontrado.subtotal = parseFloat((encontrado.cantidad * encontrado.precioUnitario).toFixed(2));  // Actualizar el subtotal
+		            encontrado.cantidad += cantidadCalculada;
+		            encontrado.subtotal = parseFloat((encontrado.cantidad * encontrado.precioUnitario).toFixed(2)); // Actualizar el subtotal
 		        } else {
 		            // Agregar un nuevo producto a la lista
 		            const detalleVenta = {
@@ -602,25 +576,23 @@
 		                descripcion: producto.descripcion,
 		                precioUnitario: producto.precioVenta,
 		                cantidad: cantidadCalculada, // Añadir la cantidad calculada
-		                subtotal: parseFloat((cantidadCalculada * producto.precioVenta).toFixed(2))  // Redondear a dos decimales
+		                subtotal: parseFloat((cantidadCalculada * producto.precioVenta).toFixed(2)) // Redondear a dos decimales
 		            };
 		            productosSeleccionados.push(detalleVenta);
 		        }
 		    } else {
 		        // Para productos no pesables
 		        if (encontrado) {
-		            // Incrementar la cantidad si el producto ya está en la lista
-		            encontrado.cantidad += 1;  
-		            encontrado.subtotal = parseFloat((encontrado.cantidad * encontrado.precioUnitario).toFixed(2));  // Actualizar el subtotal
+		            encontrado.cantidad += 1;
+		            encontrado.subtotal = parseFloat((encontrado.cantidad * encontrado.precioUnitario).toFixed(2));
 		        } else {
-		            // Agregar un nuevo producto a la lista
 		            const detalleVenta = {
 		                producto: { id: producto.id },
 		                nombreProducto: producto.nombre,
 		                descripcion: producto.descripcion,
 		                precioUnitario: producto.precioVenta,
-		                cantidad: 1, // Cantidad es 1 para productos no pesables
-		                subtotal: parseFloat(producto.precioVenta.toFixed(2))  // Redondear a dos decimales
+		                cantidad: 1,
+		                subtotal: parseFloat(producto.precioVenta.toFixed(2))
 		            };
 		            productosSeleccionados.push(detalleVenta);
 		        }
@@ -628,6 +600,7 @@
 
 		    actualizarTablaProductosSeleccionados();
 		}
+
 
 
 
