Gestion de cambios en el precio a lo largo del tiempo.

--- a/src/main/resources/templates/adminPanel.html
+++ b/src/main/resources/templates/adminPanel.html
@@ -14,17 +14,21 @@
 </head>
 <body class="bg-gray-100">
     <div class="container mx-auto py-8 px-4">
-        <h1 class="text-3xl font-bold mb-8">Panel de Administrador</h1>
+        <h1 class="text-4xl font-bold mb-8 text-center text-indigo-600">Panel de Administrador</h1>
         <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-            <a href="/detalles-venta" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Detalles de Venta</a>
-            <a href="/estadisticas" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Estadísticas</a>
-            <a href="/productos/rentabilidad" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Productos Rentabilidad</a>
-            <a href="/compras" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Compras</a>
-            <a href="/productos" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Productos</a>
-			<a href="/print/configure" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Impresora</a>
-			<a href="/barcode/configure" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Escaner</a>
-			<a href="/productos/gestionStock" class="bg-blue-500 text-white rounded-lg py-2 px-4 hover:bg-blue-600 transition duration-300 btn-admin">Gestion Stock</a>
-			 </div>
+            <a href="/detalles-venta" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Detalles de Venta</a>
+            <a href="/estadisticas" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Estadísticas</a>
+            <a href="/productos/rentabilidad" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos Rentabilidad</a>
+            <a href="/compras" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Compras</a>
+            <a href="/productos" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Productos</a>
+            <a href="/print/configure" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Impresora</a>
+            <a href="/barcode/configure" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Configurar Puerto Escaner</a>
+            <a href="/productos/gestionStock" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Gestion Stock</a>
+            <a href="/productos/gestionPrecios" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Gestion Precios</a>
+            <a href="/clientes" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Clientes</a>
+            <a href="/caja" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Caja</a>
+            <a href="/cierrecaja" class="bg-blue-500 text-white rounded-lg py-3 px-6 hover:bg-blue-600 transition duration-300 btn-admin">Apertura y cierre caja</a>
+        </div>
     </div>
 </body>
 </html>
