--- a/src/main/resources/templates/productos.html
+++ b/src/main/resources/templates/productos.html
@@ -52,7 +52,9 @@
                         <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-900">
                             <a th:href="@{'/productos/editar/' + ${producto.id}}" class="text-indigo-600 hover:text-indigo-900">Editar</a>
                             <a th:href="@{'/productos/eliminar/' + ${producto.id}}" class="text-red-600 hover:text-red-900 ml-4" onclick="return confirm('¿Estás seguro de que deseas eliminar este producto?');">Eliminar</a>
-                        </td>
+							<!-- Botón de Historial -->
+							 <a th:href="@{'/historial/' + ${producto.id}}" class="text-blue-600 hover:text-blue-900 ml-4">Historial</a>
+							</td>
                     </tr>
                 </tbody>
             </table>
